--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 alembic==1.17.1
 blinker==1.8.2
 certifi==2025.10.5
+cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.1.7
 colorama==0.4.6
+cryptography==46.0.3
 Deprecated==1.3.1
 dnspython==2.6.1
 email_validator==2.1.1
@@ -19,6 +21,7 @@ idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.4
 limits==5.6.0
+mailjet-rest==1.5.1
 Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==2.1.5
@@ -27,13 +30,14 @@ ordered-set==4.1.0
 packaging==25.0
 pillow==10.3.0
 psycopg2-binary==2.9.11
+pycparser==2.23
 Pygments==2.19.2
 PyMySQL==1.1.2
 pyotp==2.9.0
 pypng==0.20220715.0
 python-dotenv==1.0.1
 qrcode==7.4.2
-requests==2.32.3
+requests==2.32.5
 rich==14.2.0
 SQLAlchemy==2.0.30
 tomli==2.3.0
